--- a/.gitIgnore
+++ b/.gitIgnore
@@ -16,3 +16,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+public/profileImages/eluna1802\@alumno.ipn.mxprofile-image.jpg
+
+public/profileImages/yedermoon3\@gmail.comprofile-image.pdf
+
+public/profileImages/eluna1802\@alumno.ipn.mxprofile-image.jpg
+
+public/profileImages/yedermoon3\@gmail.comprofile-image.jpg
